--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "firebase": "^10.13.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "validator": "^13.12.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
